--- a/goals_bucket/src/components/CourseGoals/CourseInput/CourseInput.module.css
+++ b/goals_bucket/src/components/CourseGoals/CourseInput/CourseInput.module.css
@@ -23,11 +23,17 @@
   border-color: #8b005d;
 }
 
-.form-control.invalid input{
+.form-control.invalid input {
   border-color: red;
   background: #ffd7d7;
 }
 
-.form-control.invalid label{
+.form-control.invalid label {
   color: red;
+}
+
+@media (min-width: 768px) {
+  .button {
+    width: auto;
+  }
 }
