--- a/react-animate/src/components/Backdrop/Backdrop.css
+++ b/react-animate/src/components/Backdrop/Backdrop.css
@@ -1,9 +1,59 @@
 .Backdrop {
-    position: fixed;
-    z-index: 100;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0,0,0,0.8);
+  position: fixed;
+  z-index: 100;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  transition: all 0.3s ease-out;
+}
+
+.BackdropOpen {
+  /* display: block; */
+  opacity: 1;
+  transform: translateY(0);
+}
+
+.BackdropClosed {
+  /* display: none; */
+  opacity: 0;
+  transform: translateY(-100%);
+}
+
+.ModalOpen {
+  animation: openModal 0.4s ease-out forwards;
+}
+@keyframes openModal {
+  0% {
+    opacity: 0;
+    transform: translateY(-100%);
+  }
+  50% {
+    opacity: 1;
+    transform: translateY(20%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.ModalClose {
+  animation: closeModal 0.4s ease-out forwards;
+}
+
+@keyframes closeModal {
+  0% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+  50% {
+    opacity: 0.8;
+    transform: translateY(60%);
+  }
+  100% {
+    opacity: 0;
+    transform: translateY(-100);
+  }
 }
